[package]
name = "taskgen-rs"
version = "0.1.0"
authors = ["thymbahutymba"]
edition = "2018"
description = "Taskset generator with rt-app compatible json output."

[dependencies]
structopt = "0.3"
ndarray = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num = "0.2"
getset = "0.1"

[dependencies.cpython]
version = "0.5"
default-features = false
features = ["python27-sys"]
